# Asura2D

./: .cirrus.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/: OSTestsReport.md
.github/workflows/: cmake.yml
content/bodies/: Teeter.ini
content/level/: level_01.ini
content/shaders/: image_mirror_ps.glsl  image_rotation_ps.glsl  image_rotation_vs.glsl
content/sound/: click.opus
content/sound/ball/: ball_blob_rr_01.opus  ball_blob_rr_02.opus  ball_blob_rr_03.opus  ball_blob_rr_04.opus  ball_blob_rr_06.opus  ball_blob_rr_08.opus  ball_blob_rr_09.opus  ball_hit_big_rr_2.opus  ball_hit_big_rr_3.opus  ball_hit_big_rr_4.opus  ball_hit_big_rr_6.opus  ball_hit_small_rr_1.opus  ball_hit_small_rr_3.opus  ball_slide_big_rr_1.opus
content/sound/ball/Ballz PR/: Ballz PR-2022-12-20_1507.rpp-bak  Ballz PR.rpp
content/sound/ball/Ballz blob PR/: Ballz blob PR-2022-12-20_1516.rpp-bak  Ballz blob PR.rpp
libs/: CmakeList.txt
libs/fu2/: function2.hpp
sound/ball/: ball_blob_rr_01.opus  ball_blob_rr_02.opus  ball_blob_rr_03.opus  ball_blob_rr_04.opus  ball_blob_rr_05.opus  ball_blob_rr_06.opus  ball_blob_rr_07.opus  ball_blob_rr_08.opus  ball_blob_rr_09.opus  ball_blob_rr_10.opus  ball_hit_big_rr_1.opus  ball_hit_big_rr_2.opus  ball_hit_big_rr_3.opus  ball_hit_big_rr_4.opus  ball_hit_big_rr_5.opus  ball_hit_big_rr_6.opus  ball_hit_big_rr_7.opus  ball_hit_big_rr_8.opus  ball_hit_small_rr_1.opus  ball_hit_small_rr_2.opus  ball_hit_small_rr_3.opus  ball_hit_small_rr_4.opus  ball_hit_small_rr_5.opus  ball_hit_small_rr_6.opus  ball_hit_small_rr_7.opus  ball_hit_small_rr_8.opus  ball_slide_small_rr_1.opus
src/: CMakeLists.txt  ark_config.h  arkane.cpp  arkane.h  arkane_engine.h  asura.h  asura_config.h  asura_engine.h  game_components.h  main.cpp  pch.h
src/editor/: editor_common.cpp  editor_common.h  editor_ui.cpp
src/engine/: application.cpp  application.h  asura_global_vars.h  camera.cpp  camera.h  components.h  console.cpp  console.h  core.cpp  core.h  debug_core.cpp  debug_core.h  draw_system.cpp  draw_system.h  engine.cpp  engine.h  entities.cpp  entities.h  event.cpp  event.h  filesystem.cpp  filesystem.h  game.cpp  graphics.cpp  graphics.h  inda.h  input.cpp  input.h  level.cpp  level.h  logic_parser.cpp  logic_parser.h  physical.cpp  physical.h  physics.cpp  physics.h  physics_debug_draw.cpp  physics_debug_draw.h  physics_material.cpp  physics_material.h  (+23 more)
src/engine/audio/: audio.cpp  audio.h  module_OpenAL.cpp  module_OpenAL.h  module_OpenAL.inl  module_XAudio2.cpp  module_XAudio2.h  module_XAudio2.inl  opus_decoder.cpp  opus_decoder.h
src/engine/core/: console.cpp  console.h  console_tmagic.h  core.cpp  core.h  debug_core.cpp  debug_core.h  except.h  file_reader.cpp  file_reader.h  file_stream.cpp  file_stream.h  filesystem.cpp  filesystem.h  logic_parser.cpp  logic_parser.h  math.cpp  math.h  resources.cpp  resources.h  scheduler.cpp  scheduler.h  threads.cpp  threads.h  tmagic.h  treflect.h  types.cpp  types.h
src/engine/eces/: components.h  entities.cpp  entities.h  entities_helpers.h  entities_serializer.cpp  entities_serializer.h  event.cpp  event.h  level.cpp  level.h  reflection.h  scene.cpp  scene.h
src/engine/engine/: KeyBinder.h  application.h  engine.cpp  engine.h  game.cpp  game.h  input.cpp  input.h  key_binder.cpp  key_binder.h
src/engine/gameplay/: camera.cpp  camera.h  gameplay_common.h  holder_free.cpp  holder_free.h  holder_player.cpp  holder_player.h  holder_player_free.cpp  holder_player_free.h
src/engine/net/: network.cpp  network.h
src/engine/physics/: physics.cpp  physics.h  physics_body.cpp  physics_body.h  physics_contact_lister.cpp  physics_contact_lister.h  physics_debug_draw.cpp  physics_debug_draw.h  physics_joint.cpp  physics_joint.h  physics_material.cpp  physics_material.h  physics_world.cpp  physics_world.h
src/engine/render/: camera.cpp  camera.h  graphics.cpp  graphics.h  message_box.cpp  message_box.h  render.cpp  render.h  texture.h  ui.cpp  ui.h  window.cpp  window.h
src/engine/render/opengl/: glad.c  glad.h
src/engine/render/shaders/: shader_program.cpp  shader_program.h  tex_mirror.cpp  tex_mirror.h  tex_rotation.cpp  tex_rotation.h
src/engine/render/ui/: cursor.cpp  cursor.h
src/engine/systems/: draw_system.cpp  draw_system.h  physics_mouse_joint_system.cpp  physics_mouse_joint_system.h  physics_scene_system.cpp  physics_scene_system.h  physics_system.cpp  physics_system.h  systems.cpp  systems.h
src/game/: game.cpp  game.h  ingame.cpp  ingame.h  movement_system.cpp  movement_system.h
